fixes bug 190549 "Textarea with lots of text within refuses to submit" r=sicking sr=bzbarsky a=asa